--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,27 +1,16 @@
 <h2>Posts</h2>
 <ul class="list-group">
-  <li class="list-group-item">
+  <li *ngFor="let message of messages" class="list-group-item">
     <div class="card">
       <div class="card-header">
-        Featured
+        #{{message.id}}#
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">{{message.title}}</h5>
+        <p class="card-text">{{message.body}}</p>
+
       </div>
     </div>
   </li>
-  <li class="list-group-item">
-    <div class="card">
-      <div class="card-header">
-        Featured
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </li>
+
 </ul>
